--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
+spring.ai.openai.api-key=
+spring.ai.openai.chat.options.model=
+spring.ai.openai.chat.options.temperature=
